# v-matrix

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: deploy.yml
src/: class_data.yaml  data.yaml  job_data.yaml  main.rs  tailwind.css  theme.yaml
