[package]
name = "v-matrix"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo-console = "0.3.0"
gloo-storage = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
strum = "0.27.1"
strum_macros = "0.27.1"
yew = { version = "0.21.0", features = ["csr"] }
yew-autoprops = "0.4.1"
